--- a/peliculas.html
+++ b/peliculas.html
@@ -21,6 +21,14 @@
         <H1>Jhonny Deep</H1>
         <img src="img/Personajes Johnny Depp.png">
     </header>
+    <NAv>
+        <a href="index.html" class="item">Quien Es Jhonny Deep</a>
+        <a href="peliculas.html" class="item">Peliculas</a>
+        <a href="carrera.html" class="item">Carrera Musical</a>
+        <a href="apoyo_social.html" class="item">Apoyo Social</a>
+        <a href="premios.html" class="item">Premios y Nominaciones</a>
+        <a href="quienes.html" class="item">Quien es el personaje</a>
+    </NAv>
       <h1> Historia cinematográfica</h1>
       <p>Jhonny Deep se ha destacado a lo largo de su carrera por interprrtar innumerables personajes fantasticos, miticos, cada uno de forma unica y excepcional logrando que queden marcados para siempre y recordados durante mucho tiempo. <br> 
       Personajes como el el Sombrerero, Edwuard manos de tijera y Willie Wonka han sido tan solo unos pocos de las iconicaa interpretaciones de Jhonny Deep. </p> 
