cambio de colspan a rowspan

--- a/peliculas.html
+++ b/peliculas.html
@@ -43,11 +43,12 @@
           <td>Edward MAnos de tijera</td>
           <td>Edward</td>/*anexar imagen*/
           <td>1990</td>
-          <td>/*anexar link*/</td>
+          <td>anexar link*/</td>
         </tr>
+     
         <tr>
-          <td colspan="5">Saga Piratas del caribe</td>
-          <td colspan="5">jack sparrow</td>/* anexar imagen*/
+          <td rowspan="5">Saga Piratas del caribe</td>
+          <td rowspan="5">jack sparrow</td>/* anexar imagen*/
           <td>2003</td>
           <td>/*anexar ñink*/</td>
         </tr>
@@ -74,8 +75,8 @@
           <td>anexar link</td>
         </tr>
         <tr>
-          <td colspan="2">Saga de Alicia en el pais de las maravillas</td>
-          <td colspan="2">El sombrerero</td>
+          <td rowspan="2">Saga de Alicia en el pais de las maravillas</td>
+          <td rowspan="2">El sombrerero</td>
           <td>2010</td>
           <td>anexar link</td>
         </tr>
@@ -96,8 +97,8 @@
           <td>anexar link</td>
         </tr>
         <tr>
-          <td colspan="2">Saga de Animales fantasticos y donde encontrarlos</td>
-          <td colspan="2">Gellert Grindelwald<td>
+          <td rowspan="2">Saga de Animales fantasticos y donde encontrarlos</td>
+          <td rowspan="2">Gellert Grindelwald</td>
           <td>2016</td>
           <td>anexar link</td>
         </tr>
@@ -113,10 +114,9 @@
     
         <div class="box-footer">
             <div class="foot">
-                <img src="img/bxl-facebook.svg" alt="Facebook">
-                <h3>Facebook</h3>
+
                 <p>
-                   <a href="https://www.facebook.com/JohnnyDepp" target="_blank" > Facebook </a> 
+                   <a href="https://www.facebook.com/JohnnyDepp" target="_blank" > <img src="img/bxl-facebook.svg" alt="Facebook">Facebook </a> 
                 </p>
             </div>
             <div class="foot">
