--- a/peliculas.html
+++ b/peliculas.html
@@ -35,13 +35,13 @@
             </form>
         </div>
     </NAv>
-    <h1> Historia cinematográfica</h1>
+    <h2> Historia cinematográfica</h2>
     <p>Johnny Depp se ha destacado a lo largo de su carrera por interprrtar innumerables personajes fantasticos,
         miticos, cada uno de forma unica y excepcional logrando que queden marcados para siempre y recordados durante
         mucho tiempo. <br>
         Personajes como el el Sombrerero, Edwuard manos de tijera y Willie Wonka han sido tan solo unos pocos de las
         iconicaa interpretaciones de Johnny Depp. </p>
-    <table border="1">
+    <table border="1" class="table">
         <tr>
             <th>Nombre de la pelicula</th>
             <th>Personaje</th>
