--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <img src="img/Personajes Johnny Depp.png">
     </header>
 
-    <NAv>
-        <div>
+    <NAv class="nav">
+        <div class="nav1">
             <a href="index.html" class="item">Quien Es Johnny Depp</a>
             <a href="peliculas.html" class="item">Peliculas</a>
             <a href="carrera.html" class="item">Mas sobre Johnny</a>
             </div>
-            <div>
+            <div class="search">
                 <form action="#" name="buscar" method="get" target="_self"> 
                     <label for="buscar">Buscar</label>
                         <input type="search" id="buscar" name="buscar" placeholder="buscar"> 
@@ -58,16 +58,6 @@
                 las víctimas de Freddy Krueger.
                 <br><br>
                 <img src="img/1.jpg">
-
-            <ol>
-                <h2>¿Quien es?</h2>
-                <li>Actor</li>
-                <li>Productor</li>
-                <li>Guionista</li>
-                <li>Musico</li>
-            </ol>
-
-
             </p>
             <p>Sus películas más taquilleras han sido la saga Piratas del Caribe con más de 3,9 mil millones de dólares,
                 seguida de Alicia en el país de las maravillas con unos ingresos mundiales de 1024 millones, Charlie y
@@ -75,9 +65,16 @@
                 fábrica de chocolate con 474 millones y The Tourist con 278 millones en todo el mundo.</p>
             </p>
         </section>
-    </main>
+        <section>
+                <ol class="quien_es">
+                <h2>¿Quien es?</h2>
+                <li>Actor</li>
+                <li>Productor</li>
+                <li>Guionista</li>
+                <li>Musico</li>
+            </ol>
 
-    <div class="inicio">
+      <div class="inicio">
         <img src="img/jhonny_deep.jpg">
         <div>
             <h1>
@@ -86,7 +83,7 @@
             <p>
                 Johnny ha tenido varias parejas a lo largo de su vida, entre ellas:
             </p>
-            <ul style="list-style-image: url(img/star-solid.svg) ;"> 
+            <ul style="list-style-image: url(img/star-solid.svg) ;" class="lista"> 
                 <li>Lori Anne Allison</li>
                 <li>Sherilyn Fenn</li>
                 <li>Winona Ryder</li>
@@ -96,9 +93,11 @@
             </ul>
         </div>
     </div>
+        </section>
+    </main>
     <div>
         <H2>¿Quieres saber mas? ¡Suscribete!</H2>
-    <form action="#" method="get" accept-charset="utf-8" name="suscribete">
+    <form action="#" method="get" accept-charset="utf-8" name="suscribete" class="form">
      <h2></h2>
       <label for="nombre">Nombre:</label>
         <input type="text" name="nombre" id="nombre" placeholder="Ingresa tu nombre"/>
