--- a/carrera.html
+++ b/carrera.html
@@ -36,9 +36,10 @@
             </form>
         </div>
     </NAv>
+    <main>
     <section>
         <article>
-            <div>
+            <div class="banner">
                 <img src="img/3.jpg">
                 <img src="img/guitarra.jpg">
                 <img src="img/4.jpg">
@@ -63,6 +64,8 @@
             </div>
         </article>
     </section>
+    </main>
+    <main>
     <section>
         <article>
             <div>
@@ -83,7 +86,7 @@
         <article>
             <div>
                 <H3>Nominaciones</H3>
-                <table border="1">
+                <table border="1" class="table">
                     <tr>
                         <th>Nominación</th>
                         <th>Pelicula</th>
@@ -153,7 +156,7 @@
         </article>  
         <article>
                 <H3>Premios</H3>
-                <table border="1">
+                <table border="1" class="table">
                     <tr>
                         <th>Premio</th>
                         <th>Pelicula</th>
@@ -194,6 +197,7 @@
         </article>
 
     </section>
+    </main>
 
 
 
