--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </div>
     </NAv>
     <main>
-        <section>
-            <div class="search">
+        <section class="busqueda">
+            <div>
                 <form action="#" name="buscar" method="get" target="_self"> 
                     <label for="buscar">Buscar</label>
                         <input type="search" id="buscar" name="buscar" placeholder="buscar"> 
@@ -39,8 +39,12 @@
                 </form>
             </div>
         </section>
+        <div>
+        <H2 class="titulo2">¿Quien es Johnny Depp?</H2>
+        </div>
         <section id="biografia">
-            <H2>¿Quien es Johnny Depp?</H2>
+            <img src="img/1.jpg">
+            <div class="biografia">
             <p>
                 John Christopher Depp II, Nacio en Owensboro, Kentucky, el 9 de junio de 1963, es de nacionalidad
                 Estadounidense, hijo de John Christopher Depp un ingeniero civil y de Betty Sue Palmer —cuyo apellido de
@@ -58,43 +62,42 @@
                 Allison y este lo animó a probar suerte como actor.
                 Comenzó su carrera en la película de terror A Nightmare on Elm Street de 1984 como Glen Lantz, una de
                 las víctimas de Freddy Krueger.
-                <br><br>
-                <img src="img/1.jpg">
             </p>
             <p>Sus películas más taquilleras han sido la saga Piratas del Caribe con más de 3,9 mil millones de dólares,
                 seguida de Alicia en el país de las maravillas con unos ingresos mundiales de 1024 millones, Charlie y
                 la
                 fábrica de chocolate con 474 millones y The Tourist con 278 millones en todo el mundo.</p>
             </p>
+            </div>
         </section>
-        <section>
-                <ol class="quien_es">
+        <section id="quien-es">
+            <article class="seccion">
+                <img src="img/jhonny_deep.jpg">
+            <ol class="quien_es">
                 <h2>¿Quien es?</h2>
+                <p> Johnny tiene diferentes facetas en su vida y en cada una de ellas nos ha logrado sorprender, él es:</p>
                 <li>Actor</li>
                 <li>Productor</li>
                 <li>Guionista</li>
                 <li>Musico</li>
             </ol>
-
-      <div class="inicio">
-        <img src="img/jhonny_deep.jpg">
-        <div>
-            <h1>
-                ¿Y su vida sentimental?
-            </h1>
-            <p>
-                Johnny ha tenido varias parejas a lo largo de su vida, entre ellas:
-            </p>
-            <ul style="list-style-image: url(img/star-solid.svg) ;" class="lista"> 
-                <li>Lori Anne Allison</li>
+            </article>
+            <article class="seccion">
+                <img src="../Personaje/img/pareja.jpg">
+            <div>
+            <ul style="list-style-image: url(img/star-solid.svg) ;" class="quien_es"> 
+                <h2 class="quien_es">¿Y su vida sentimental?</h2>
+                <p>Johnny ha tenido varias parejas a lo largo de su vida, entre ellas:</p>
+                <li>Polina Glen</li>
+                <li>Lori Anne Allison</li>    
                 <li>Sherilyn Fenn</li>
                 <li>Winona Ryder</li>
                 <li>Kate Moss</li>
                 <li>Vanesa Paradis</li>
                 <li>Amber Heard</li>
             </ul>
-        </div>
-    </div>
+            </div>
+            </article>
         </section>
     </main>
     <div>
