--- a/peliculas.html
+++ b/peliculas.html
@@ -4,9 +4,8 @@
 
 <head>
     <meta charset="utf-8">
-
-    <link rel="stylesheet" type="text/css" href="css/estilos.css" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="css/estilos.css" />
     <meta name="Caren Daza" content="Mi personaje" />
     <title>Mi Personaje</title>
     <script src="https://kit.fontawesome.com/74a1aab293.js" crossorigin="anonymous"></script>
@@ -18,23 +17,27 @@
 <body>
 
     <header class="header">
-        <H1>Johnny Depp </H1>
-        <img src="img/Personajes Johnny Depp.png">
+        <div class="title">
+        <H1 class="text-header">Johnny Depp</H1>
+        </div>  
     </header>
-    <NAv>
-        <div>
+
+    <NAv class="nav">
+        <div class="nav1">
             <a href="index.html" class="item">Quien Es Johnny Depp</a>
             <a href="peliculas.html" class="item">Peliculas</a>
-            <a href="carrera.html" class="item">Mas sobre Johnny</a>            
-        </div>
-        <div>
-            <form action="#" name="buscar" method="get" target="_self">
-                <label for="buscar">Buscar</label>
-                <input type="search" id="buscar" name="buscar" placeholder="buscar">
-                <input type="submit" value="ir">
-            </form>
+            <a href="carrera.html" class="item">Mas sobre Johnny</a>
         </div>
     </NAv>
+    <section class="busqueda">
+        <div>
+            <form action="#" name="buscar" method="get" target="_self"> 
+                <label for="buscar">Buscar</label>
+                    <input type="search" id="buscar" name="buscar" placeholder="buscar"> 
+                    <input type="submit" value="ir">
+            </form>
+        </div>
+    </section>
     <h2> Historia cinematográfica</h2>
     <p>Johnny Depp se ha destacado a lo largo de su carrera por interprrtar innumerables personajes fantasticos,
         miticos, cada uno de forma unica y excepcional logrando que queden marcados para siempre y recordados durante
