--- a/peliculas.html
+++ b/peliculas.html
@@ -125,35 +125,31 @@
     </p>
 
     <footer class="footer">
-
+    
         <div class="box-footer">
             <div class="foot">
                 <p>
-                    <a href="https://www.facebook.com/JohnnyDepp" target="_blank"> <img src="img/bxl-facebook.svg"
-                            alt="Facebook">Facebook </a>
+                   <a href="https://www.facebook.com/JohnnyDepp"  target="_blank"><i class="fa-brands fa-facebook"></i> Facebook</a> 
                 </p>
             </div>
             <div class="foot">
                 <p>
-                    <a href="https://www.instagram.com/johnnydepp/?hl=es" target="_blank"><img
-                            src="img/bxl-instagram.svg" alt="Instagram"> Instagram</a>
+                    <a href="https://www.instagram.com/johnnydepp/?hl=es" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a>   
                 </p>
             </div>
             <div class="foot">
                 <p>
-                    <a href="https://www.youtube.com/channel/UCt1esA_d0ER-HI6j05W8iow" target="_blank"><img
-                            src="img/bxl-youtube.svg" alt="Youtube"> Youtube </a>
+                    <a href="https://www.youtube.com/channel/UCt1esA_d0ER-HI6j05W8iow" target="_blank" ><i class="fa-brands fa-youtube"></i> Youtube </a>
                 </p>
             </div>
             <div class="foot">
-                <p>
-                    <a href="http://www.samuelgoldwynfilms.com/minamata/" target="_blank"><img src="img/bx-world.svg"
-                            alt="Pagina Web">Sitio Oficial</a>
+                <p class="pfoot">
+                   <a href="http://www.samuelgoldwynfilms.com/minamata/" target="_blank"><i class="fa-solid fa-earth-americas"></i>Sitio Oficial</a>
                 </p>
             </div>
         </div>
-    </footer>
+</footer>
+
 </body>
-</head>
 
 </html>
