--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 </p>
             </div>
             <div class="foot">
-                <p class="pfoot">
+                <p class="pfot">
                    <a href="http://www.samuelgoldwynfilms.com/minamata/" target="_blank"><i class="fa-solid fa-earth-americas"></i>Sitio Oficial</a>
                 </p>
             </div>
