adicion de estilos

--- a/carrera.html
+++ b/carrera.html
@@ -42,15 +42,15 @@
     <section>
         <article>
             <div class="banner">
-                <img src="img/3.jpg">
+                <img src="img/3.jpg" >
                 <img src="img/guitarra.jpg">
                 <img src="img/4.jpg">
                 <img src="img/2.jpg">
-                <img src="img/5.jpg">
+                <img src="img/5.jpg" >
             </div>
             <div>
-                <H2>Carrera Musical</H2>
-                <p>El actor Johnny Depp no solo tiene talento para actuar en pantallas e interpretar diversos personajes
+                <H2 class="titulo2">Carrera Musical</H2>
+                <p class="biografia">El actor Johnny Depp no solo tiene talento para actuar en pantallas e interpretar diversos personajes
                     excéntricos, la música también ha sido desde siempre una de sus grandes pasiones y así lo ha
                     demostrado en los últimos años.
 
@@ -58,7 +58,7 @@
                     actor, es desde 2015 que su talento como guitarrista se ha hecho notar con mayor fervor en Hollywood
                     Vampires, la banda creada para conmemorar a grandes personajes de la industria y de la que hacen
                     parte Alice Cooper y Joe Perry.</p>
-                <p>Su amor por la música no es secreto para sus más fieles seguidores pues el actor ha participado en el
+                <p class="biografia">Su amor por la música no es secreto para sus más fieles seguidores pues el actor ha participado en el
                     escenario con grandes figuras como Aerosmith, Marilyn Manson, Ryan Adams y Keith Richards, el
                     guitarrista de los Rolling Stones, con quien tocó Key to the Highway en 2011, un momento épico para
                     el actor pues este es uno de sus grandes ídolos. Por otra parte, Johnny Depp también ha hecho
@@ -69,25 +69,26 @@
     </main>
     <main>
     <section>
-        <article>
+        <article class="carrera">
             <div>
                 <img src="img/fama.jpg">
             </div>
             <div>
-                <H2>Premios y nominaciones</H2>
+                <img src="img/premio.jpg">
+            </div>
+        </article>
+            <div>
+                <H2 class="titulo2">Premios y nominaciones</H2>
 
                 <p>Gracias a su gran talento johnny ha sido nomidado alrededor de 30 veces en diferentes tipos de
                     premios de los cuales fue ganador de 6 premios, e incluso ya cuenta con su estrella de la fama en el
                     gran paseo de la fama de Hollywood. A continuacion detallaremos como han sido sus nominaciones y
                     premios:</p>
             </div>
-            <div>
-                <img src="img/premio.jpg">
-            </div>
         </article>
-        <article>
-            <div>
-                <H3>Nominaciones</H3>
+        <article class="premios">
+            <div class="table2">
+                <H2 class="titulo2">Nominaciones</H2>
                 <table border="1" class="table">
                     <tr>
                         <th>Nominación</th>
@@ -155,9 +156,8 @@
                     </tr>
                 </table>
             </div>
-        </article>  
-        <article>
-                <H3>Premios</H3>
+            <div class="table2">
+                <H2 class="titulo2">Premios</H2>
                 <table border="1" class="table">
                     <tr>
                         <th>Premio</th>
@@ -195,16 +195,11 @@
                         <td>2021</td>
                     </tr>
                 </table>
-        
+            </div>
         </article>
 
     </section>
     </main>
-
-
-
-
-
 
     <footer class="footer">
     
