se aplica responsive
se crean las media querins para los diferentes dispositivos en el Index

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/estilos.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Caren Daza" content="Mi personaje" />
     <title>Mi Personaje</title>
     <script src="https://kit.fontawesome.com/74a1aab293.js" crossorigin="anonymous"></script>
@@ -34,7 +35,7 @@
             <div>
                 <form action="#" name="buscar" method="get" target="_self"> 
                     <label for="buscar">Buscar</label>
-                        <input type="search" id="buscar" name="buscar" placeholder="buscar"> 
+                        <input type="search" id="buscar" name="buscar" placeholder=""> 
                         <input type="submit" value="ir">
                 </form>
             </div>
@@ -83,7 +84,7 @@
             </ol>
             </article>
             <article class="seccion">
-                <img src="../Personaje/img/pareja.jpg">
+                <img src="img/pareja.jpg">
             <div>
             <ul style="list-style-image: url(img/star-solid.svg) ;" class="quien_es"> 
                 <h2 class="quien_es">¿Y su vida sentimental?</h2>
