--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         </div>  
     </header>
 
-    <NAv class="nav">
+    <nav>
         <div class="nav1">
             <a href="index.html" class="item">Quien Es Johnny Depp</a>
             <a href="peliculas.html" class="item">Peliculas</a>
             <a href="carrera.html" class="item">Mas sobre Johnny</a>
         </div>
-    </NAv>
+    </nav>
     <main>
         <section class="busqueda">
             <div>
@@ -202,7 +202,7 @@
                 </p>
             </div>
             <div class="foot">
-                <p class="pfot">
+                <p >
                    <a href="http://www.samuelgoldwynfilms.com/minamata/" target="_blank"><i class="fa-solid fa-earth-americas"></i>Sitio Oficial</a>
                 </p>
             </div>
