actualizacion adaptacion resoluciones
se generan actualizaciones en resoluciones del index

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>  
     </header>
 
-    <nav>
+    <nav class="nav">
         <div class="nav1">
             <a href="index.html" class="item">Quien Es Johnny Depp</a>
             <a href="peliculas.html" class="item">Peliculas</a>
@@ -183,8 +183,7 @@
     </div>
     </form> 
     
-    <footer class="footer">
-    
+    <footer >
         <div class="box-footer">
             <div class="foot">
                 <p>
