actualizacion responsive-grid
se aplica responsive utilizando grid para la vista de personajes

--- a/peliculas.html
+++ b/peliculas.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="css/estilos.css" />
+    <link rel="stylesheet" type="text/css" href="css/estilos2.css" />
     <meta name="Caren Daza" content="Mi personaje" />
     <title>Mi Personaje</title>
     <script src="https://kit.fontawesome.com/74a1aab293.js" crossorigin="anonymous"></script>
@@ -14,21 +14,21 @@
 
 </head>
 
-<body>
-
+<body class="container">
     <header class="header">
         <div class="title">
             <H1 class="text-header">Johnny Depp</H1>
         </div>
     </header>
 
-    <NAv class="nav">
+    <nav class="nav">
         <div class="nav1">
             <a href="index.html" class="item">Quien Es Johnny Depp</a>
             <a href="peliculas.html" class="item">Peliculas</a>
             <a href="carrera.html" class="item">Mas sobre Johnny</a>
         </div>
-    </NAv>
+    </nav>
+
     <section class="busqueda">
         <div>
             <form action="#" name="buscar" method="get" target="_self">
@@ -38,6 +38,7 @@
             </form>
         </div>
     </section>
+    <main>
     <h2 class="titulo2"> Historia cinematográfica</h2>
         <div class="peli2">
             <section class="biografia">
@@ -55,7 +56,8 @@
                 </p>
             </section>
         </div>
-        <main class="peliculas">
+    </main>
+    <main class="peliculas">
         <SECtion class="peli">
             <table border="1" class="table">
                 <tr>
@@ -134,7 +136,8 @@
                 </tr>
             </table>
         </SECtion>
-        <section class="peli">
+    </main>
+        <section class="pelis">
             <div class="formulario">
                 <H2 class="titulo23">¿Quieres saber más? ¡Suscríbete!</H2>
                 <form action="#" method="get" accept-charset="utf-8" name="suscribete" class="formpel">
@@ -221,12 +224,7 @@
                     </div>
                 </form>
                 </div>
-        </section>
-    </main>
-
-
-
-   
+        </section>   
     <footer class="footer">
 
         <div class="box-footer">
